--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "app for voting on dog breeds",
   "main": "server.ts",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/server.ts",
     "start:dev": "LOCAL=true ts-node server.ts",
-    "format": "prettier --write src",
-    "format:check": "prettier --check src",
-    "lint": "eslint src",
+    "format": "prettier --write server.ts",
+    "format:check": "prettier --check server.ts",
+    "lint": "eslint server.ts",
     "postinstall": "tsc",
     "typecheck": "tsc --noEmit"
   },
@@ -17,7 +17,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint": "^8.4.1",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "prettier": "^2.5.1"
@@ -26,6 +25,9 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/pg": "^7.14.7",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
